build: disable new architecture (Fabric) for SDK54 iOS

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "icon": "./assets/images/JuiceIT.png",
     "splash": {
       "image": "./assets/images/JuiceIT.png",
